# lifeos

./: .coverage  .dockerignore  .env  .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  :memory:  CI_TEST.md  Makefile  bandit-report.json  coverage.xml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  ruff.toml  safety-report.json
deploy/: Dockerfile  (+3 more)
flask_app/ml-suggester-repo/: README.md  output.parquet  pyproject.toml
flask_app/ml-suggester-repo/data/: data.xlsx  data_imbalanced.csv  data_imbalanced.parquet  data_lines.csv  data_lines.parquet  lines.parquet  predictions_input.csv  transactions_upload.csv
flask_app/ml-suggester-repo/models_cny/: metrics.json  model.joblib  schema.json
flask_app/ml-suggester-repo/models_krw/: metrics.json
flask_app/ml-suggester-repo/models_myr/: metrics.json
flask_app/ml-suggester-repo/src/ml_suggester/: api_server.py  cli.py  data_io.py  features.py  models.py  parse_blocks.py  train_cli.py  utils.py
flask_app/ml-suggester-repo/src/ml_suggester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flask_app/ml-suggester-repo/tests/: test_parse_blocks.py
flask_app/ml_journal_suggester/: README.md  pyproject.toml  requirements.txt
flask_app/ml_journal_suggester/examples/: run_infer.sh  run_train.sh  sample_infer_input.jsonl  sample_train.jsonl
flask_app/ml_journal_suggester/src/ml_journal_suggester/: __init__.py  data_schemas.py  features.py  infer.py  metrics.py  pipeline.py  preprocessing.py  train.py  utils.py
flask_app/ml_journal_suggester/src/ml_journal_suggester/decoding/: __init__.py  greedy_balance.py  ilp_balance.py
flask_app/ml_journal_suggester/tests/: test_decoding.py  test_models.py  test_pipeline.py  test_preprocessing.py
(+616 files in other folders)
